--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "fast-sort": "^3.4.0",
     "next": "14.0.4",
     "postcss": "8.4.33",
     "react": "18.2.0",
