--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "daisyui": "^4.6.0",
-    "prettier": "3.1.1"
+    "prettier": "3.1.1",
+    "prisma": "^5.8.1"
   }
 }
