--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres.blmhcbbhdyjoajdlutoi:KPqAmVB0yyetTLmc@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres"
+DATABASE_URL="postgresql://postgres:KPqAmVB0yyetTLmc@db.blmhcbbhdyjoajdlutoi.supabase.co:5432/postgres"
