feat: uploading files

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:KPqAmVB0yyetTLmc@db.blmhcbbhdyjoajdlutoi.supabase.co:5432/postgres"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="do3t9s6ub"
