--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 
 DATABASE_URL="postgresql://postgres:KPqAmVB0yyetTLmc@db.blmhcbbhdyjoajdlutoi.supabase.co:5432/postgres"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="do3t9s6ub"
+NEXTAUTH_URL = "localhost:300"
+NEXTAUTH_RUL = nL03VJNnG8dm1mYEx07aNWGKd7EVxHJnUhYv17wDmYk=
