--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "14.0.4",
     "fast-sort": "^3.4.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-cloudinary": "^5.18.0",
     "postcss": "8.4.33",
     "react": "18.2.0",
