feat: sending emails

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ NEXTAUTH_URL='http://localhost:3000'
 NEXTAUTH_SECRET=klXNtjktKpDQgXV2aOADBuYoKZzw5nBjFoRPZ1SSwjI=
 GOOGLE_CLIENT_ID=429038048089-o5p5gedogm4m713q2j4aj8m7vieg153h.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+RESEND_API_KEY=re_Yhfn9kox_JcxeEP9P5D2rsLqS7eRyGDHw
